Update About section and collaborators
- Expanded About section with autonomous driving emphasis
- Changed 'Collaborating Institutions' to 'Collaborators'
- Added UC San Diego LISA, CMCR, and CREL as collaborators
- Changed ampersand to 'and' with Oxford comma in lab name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <section class="hero">
   <div class="container">
     <h1>Mi<sup>3</sup> Lab</h1>
-    <p class="subtitle">Machine Intelligence, Interaction & Imagination</p>
+    <p class="subtitle">Machine Intelligence, Interaction, and Imagination</p>
     <p class="tagline">"How do we ascribe meaning to objects and actions in the open world to make safe, goal-aligned decisions?"</p>
   </div>
 </section>
@@ -14,7 +14,8 @@ title: Home
 <section class="about">
   <div class="container">
     <h2 class="section-title">About Our Lab</h2>
-    <p>The Mi<sup>3</sup> Lab at UC Merced researches machine intelligence, interaction, and imagination to develop safer autonomous vehicles, robots, and human-interactive intelligent systems. We work at the intersection of artificial intelligence, computer vision, and human-computer interaction to create systems that can understand and safely navigate the complexities of the real world.</p>
+    <p>The Mi<sup>3</sup> Lab at UC Merced researches machine intelligence, interaction, and imagination to develop safer autonomous vehicles, robots, and human-interactive intelligent systems. Our primary focus is on <strong>safe autonomous driving and intelligent transportation systems</strong>, where we work to ensure that self-driving vehicles can safely interact with all road users—including first responders, pedestrians, cyclists, and vulnerable populations.</p>
+    <p style="margin-top: 15px;">We address critical challenges such as how autonomous vehicles should respond to emergency vehicles, how to make mobility accessible for all populations, and how intelligent systems can understand both verbal and non-verbal human communication. Our research spans artificial intelligence, computer vision, multimodal machine learning, and human-robot interaction, with a strong emphasis on safety validation, explainability, and real-world deployment.</p>
   </div>
 </section>
 
@@ -78,9 +79,11 @@ title: Home
 
 <section class="collaborators-section">
   <div class="container">
-    <h2 class="section-title">Collaborating Institutions</h2>
+    <h2 class="section-title">Collaborators</h2>
     <div class="collaborators">
-      <div class="collaborator">UC San Diego</div>
+      <div class="collaborator">UC San Diego Laboratory for Intelligent and Safe Automobiles</div>
+      <div class="collaborator">UC San Diego Center for Medicinal Cannabis Research</div>
+      <div class="collaborator">UC San Diego Center for Research in Entertainment and Learning</div>
       <div class="collaborator">Aalborg University</div>
       <div class="collaborator">Technical University of Munich</div>
     </div>
