Add all 22 lab members to People page
Added: Harsha Krishnaswamy, Wesley Maia, Erika Maquiling, Kianna Ng,
Srinivasa Perisetla, Guillermo Roque, Parthib Roy, Angel Martinez Sanchez,
Roshan Sanjeev, Shashank Shriram, Giovanni Tapia, Yash Tandon

--- a/people.html
+++ b/people.html
@@ -21,6 +21,27 @@ title: People
     </div>
 
     <div class="person-card">
+      <div class="person-avatar">WM</div>
+      <h3>Wesley Maia</h3>
+      <p class="role">PhD Student</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">KN</div>
+      <h3>Kianna Ng</h3>
+      <p class="role">PhD Student</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">AM</div>
+      <h3>Angel Martinez Sanchez</h3>
+      <p class="role">PhD Student</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
       <div class="person-avatar">AG</div>
       <h3>Akshay Gopalkrishnan</h3>
       <p class="role">Graduate Researcher</p>
@@ -56,10 +77,73 @@ title: People
     </div>
 
     <div class="person-card">
+      <div class="person-avatar">HK</div>
+      <h3>Harsha Krishnaswamy</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">EM</div>
+      <h3>Erika Maquiling</h3>
+      <p class="role">Student Researcher, CITRIS Innovation Intern</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">SP</div>
+      <h3>Srinivasa Perisetla</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">GR</div>
+      <h3>Guillermo Roque</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">PR</div>
+      <h3>Parthib Roy</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">RS</div>
+      <h3>Roshan Sanjeev</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">SS</div>
+      <h3>Shashank Shriram</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">GT</div>
+      <h3>Giovanni Tapia</h3>
+      <p class="role">Student Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
       <div class="person-avatar">LF</div>
       <h3>Laura Fleig</h3>
       <p class="role">Undergraduate Researcher</p>
       <p class="affiliation">Cognitive Science</p>
+    </div>
+
+    <div class="person-card">
+      <div class="person-avatar">AC</div>
+      <h3>Alton Chao</h3>
+      <p class="role">CITRIS Intern</p>
+      <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
@@ -77,10 +161,10 @@ title: People
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">AC</div>
-      <h3>Alton Chao</h3>
-      <p class="role">CITRIS Intern</p>
-      <p class="affiliation">Computer Science & Engineering</p>
+      <div class="person-avatar">YT</div>
+      <h3>Yash Tandon</h3>
+      <p class="role">Visiting Undergraduate Researcher</p>
+      <p class="affiliation">Data Science, UC San Diego</p>
     </div>
   </div>
 
