Move Highlights to combined Highlights & Gallery page
- Remove Highlights section from homepage
- Create combined Highlights & Gallery page
- Reorder Prospective page: Visiting Researchers now above Undergrads
- Update navigation

--- a/gallery.html
+++ b/gallery.html
@@ -1,30 +1,44 @@
 ---
 layout: default
-title: Gallery
+title: Highlights & Gallery
 ---
 
 <div class="page-header">
   <div class="container">
-    <h1>Photo Gallery</h1>
-    <p>Moments from the Mi<sup>3</sup> Lab</p>
+    <h1>Highlights & Gallery</h1>
+    <p>Achievements and moments from the Mi<sup>3</sup> Lab</p>
   </div>
 </div>
 
 <div class="container">
-  <p style="text-align: center; color: #666; padding: 60px 20px;">
-    Photo gallery coming soon. Check back for photos of our lab, research activities, conferences, and team events.
-  </p>
+  <section class="highlights-page-section">
+    <h2>Highlights</h2>
+    <ul class="highlights-list">
+      <li>Bosch Best Paper Award at IEEE/CVF WACV</li>
+      <li>Workshop organizers at CVPR, IEEE IV, IEEE ITSC, and ICPR</li>
+      <li>CITRIS WIP Symposium "Most Impactful Contribution" Award</li>
+      <li>Multiple students accepted to CRA UR2PhD program</li>
+      <li>Research presentations at ICRA@40 in Rotterdam</li>
+    </ul>
+  </section>
 
-  <!--
-  To add photos, place images in the /assets/images/gallery/ folder and add them like this:
+  <section class="gallery-page-section">
+    <h2>Gallery</h2>
+    <p style="color: #666; padding: 40px 0;">
+      Photo gallery coming soon. Check back for photos of our lab, research activities, conferences, and team events.
+    </p>
 
-  <div class="gallery-grid">
-    <div class="gallery-item">
-      <img src="/assets/images/gallery/photo1.jpg" alt="Description">
+    <!--
+    To add photos, place images in the /assets/images/gallery/ folder and add them like this:
+
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <img src="/assets/images/gallery/photo1.jpg" alt="Description">
+      </div>
+      <div class="gallery-item">
+        <img src="/assets/images/gallery/photo2.jpg" alt="Description">
+      </div>
     </div>
-    <div class="gallery-item">
-      <img src="/assets/images/gallery/photo2.jpg" alt="Description">
-    </div>
-  </div>
-  -->
+    -->
+  </section>
 </div>
