Move 10 members to alumni, add Anas Saaed
Moved to alumni:
- Akshay Gopalkrishnan, Aryan Keskar, Harsha Krishnaswamy
- Shyam Gupta, Srinivasa Perisetla, Guillermo Roque
- Alton Chao, Tonko Bossen, Sven Kirchner

Added: Anas Saaed (alumni)

--- a/people.html
+++ b/people.html
@@ -42,13 +42,6 @@ title: People
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">AG</div>
-      <h3>Akshay Gopalkrishnan</h3>
-      <p class="role">Graduate Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
       <div class="person-avatar">MK</div>
       <h3>Maitrayee Keskar</h3>
       <p class="role">Graduate Researcher</p>
@@ -63,44 +56,9 @@ title: People
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">SG</div>
-      <h3>Shyam Gupta</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">AK</div>
-      <h3>Aryan Keskar</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">HK</div>
-      <h3>Harsha Krishnaswamy</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
       <div class="person-avatar">EM</div>
       <h3>Erika Maquiling</h3>
       <p class="role">Student Researcher, CITRIS Innovation Intern</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">SP</div>
-      <h3>Srinivasa Perisetla</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">GR</div>
-      <h3>Guillermo Roque</h3>
-      <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
@@ -140,27 +98,6 @@ title: People
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">AC</div>
-      <h3>Alton Chao</h3>
-      <p class="role">CITRIS Intern</p>
-      <p class="affiliation">Computer Science & Engineering</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">TB</div>
-      <h3>Tonko Emil Westerhof Bossen</h3>
-      <p class="role">Visiting Graduate Researcher</p>
-      <p class="affiliation">Aalborg University, Denmark</p>
-    </div>
-
-    <div class="person-card">
-      <div class="person-avatar">SK</div>
-      <h3>Sven Kirchner</h3>
-      <p class="role">Visiting Graduate Researcher</p>
-      <p class="affiliation">Technical University of Munich, Germany</p>
-    </div>
-
-    <div class="person-card">
       <div class="person-avatar">YT</div>
       <h3>Yash Tandon</h3>
       <p class="role">Visiting Undergraduate Researcher</p>
@@ -172,16 +109,44 @@ title: People
     <h2>Alumni</h2>
     <ul class="alumni-list">
       <li>
-        <span class="alumni-name">Jane Doe</span>
-        <span class="alumni-details">Former Graduate Researcher &rarr; Research Scientist at Waymo</span>
+        <span class="alumni-name">Akshay Gopalkrishnan</span>
+        <span class="alumni-details">Graduate Researcher &rarr; Current position TBD</span>
       </li>
       <li>
-        <span class="alumni-name">John Smith</span>
-        <span class="alumni-details">Former Undergraduate Researcher &rarr; PhD Student at Stanford University</span>
+        <span class="alumni-name">Aryan Keskar</span>
+        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
       </li>
       <li>
-        <span class="alumni-name">Alex Johnson</span>
-        <span class="alumni-details">Former Visiting Researcher &rarr; Assistant Professor at ETH Zurich</span>
+        <span class="alumni-name">Harsha Krishnaswamy</span>
+        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+      </li>
+      <li>
+        <span class="alumni-name">Shyam Gupta</span>
+        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+      </li>
+      <li>
+        <span class="alumni-name">Srinivasa Perisetla</span>
+        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+      </li>
+      <li>
+        <span class="alumni-name">Guillermo Roque</span>
+        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+      </li>
+      <li>
+        <span class="alumni-name">Alton Chao</span>
+        <span class="alumni-details">CITRIS Intern &rarr; Current position TBD</span>
+      </li>
+      <li>
+        <span class="alumni-name">Tonko Emil Westerhof Bossen</span>
+        <span class="alumni-details">Visiting Graduate Researcher &rarr; Aalborg University, Denmark</span>
+      </li>
+      <li>
+        <span class="alumni-name">Sven Kirchner</span>
+        <span class="alumni-details">Visiting Graduate Researcher &rarr; Technical University of Munich, Germany</span>
+      </li>
+      <li>
+        <span class="alumni-name">Anas Saaed</span>
+        <span class="alumni-details">Former role TBD &rarr; Current position TBD</span>
       </li>
     </ul>
   </div>
