Add Edmund Chao to alumni (MEng at UCLA Mobility Lab)

--- a/people.html
+++ b/people.html
@@ -137,6 +137,10 @@ title: People
         <span class="alumni-details">CITRIS Intern &rarr; Current position TBD</span>
       </li>
       <li>
+        <span class="alumni-name">Edmund Chao</span>
+        <span class="alumni-details">Student Researcher &rarr; MEng, UCLA Mobility Lab</span>
+      </li>
+      <li>
         <span class="alumni-name">Tonko Emil Westerhof Bossen</span>
         <span class="alumni-details">Visiting Graduate Researcher &rarr; Aalborg University, Denmark</span>
       </li>
