Add Ryan Milstrey (Undergraduate Researcher, CSE)

--- a/people.html
+++ b/people.html
@@ -98,6 +98,13 @@ title: People
     </div>
 
     <div class="person-card">
+      <div class="person-avatar">RM</div>
+      <h3>Ryan Milstrey</h3>
+      <p class="role">Undergraduate Researcher</p>
+      <p class="affiliation">Computer Science & Engineering</p>
+    </div>
+
+    <div class="person-card">
       <div class="person-avatar">YT</div>
       <h3>Yash Tandon</h3>
       <p class="role">Visiting Undergraduate Researcher</p>
