Add headshot photos for 12 team members
Photos added for: Ross, Wesley, Kianna, Angel, Maitrayee, Marcus,
Erika, Parthib, Roshan, Shashank, Giovanni, Laura

Ryan Milstrey and Yash Tandon use initials (no photo yet)

--- a/people.html
+++ b/people.html
@@ -13,7 +13,7 @@ title: People
 <div class="container">
   <div class="people-grid flat">
     <div class="person-card">
-      <div class="person-avatar">RG</div>
+      <img src="/assets/images/people/ross.webp" alt="Ross Greer" class="person-avatar">
       <h3>Ross Greer</h3>
       <p class="role">Director, Mi<sup>3</sup> Laboratory</p>
       <p class="affiliation">Computer Science and Engineering<br>University of California, Merced</p>
@@ -21,77 +21,77 @@ title: People
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">WM</div>
+      <img src="/assets/images/people/wesley.webp" alt="Wesley Maia" class="person-avatar">
       <h3>Wesley Maia</h3>
       <p class="role">PhD Student</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">KN</div>
+      <img src="/assets/images/people/kianna.webp" alt="Kianna Ng" class="person-avatar">
       <h3>Kianna Ng</h3>
       <p class="role">PhD Student</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">AM</div>
+      <img src="/assets/images/people/angel.webp" alt="Angel Martinez Sanchez" class="person-avatar">
       <h3>Angel Martinez Sanchez</h3>
       <p class="role">PhD Student</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">MK</div>
+      <img src="/assets/images/people/maitrayee.webp" alt="Maitrayee Keskar" class="person-avatar">
       <h3>Maitrayee Keskar</h3>
       <p class="role">Graduate Researcher</p>
       <p class="affiliation">Electrical & Computer Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">MB</div>
+      <img src="/assets/images/people/marcus.webp" alt="Marcus Blennemann" class="person-avatar">
       <h3>Marcus Blennemann</h3>
       <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science and Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">EM</div>
+      <img src="/assets/images/people/erika.webp" alt="Erika Maquiling" class="person-avatar">
       <h3>Erika Maquiling</h3>
       <p class="role">Student Researcher, CITRIS Innovation Intern</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">PR</div>
+      <img src="/assets/images/people/parthib.webp" alt="Parthib Roy" class="person-avatar">
       <h3>Parthib Roy</h3>
       <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">RS</div>
+      <img src="/assets/images/people/roshan.webp" alt="Roshan Sanjeev" class="person-avatar">
       <h3>Roshan Sanjeev</h3>
       <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">SS</div>
+      <img src="/assets/images/people/shashank.webp" alt="Shashank Shriram" class="person-avatar">
       <h3>Shashank Shriram</h3>
       <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">GT</div>
+      <img src="/assets/images/people/giovanni.webp" alt="Giovanni Tapia" class="person-avatar">
       <h3>Giovanni Tapia</h3>
       <p class="role">Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
     <div class="person-card">
-      <div class="person-avatar">LF</div>
+      <img src="/assets/images/people/laura.webp" alt="Laura Fleig" class="person-avatar">
       <h3>Laura Fleig</h3>
       <p class="role">Undergraduate Researcher</p>
       <p class="affiliation">Cognitive Science</p>
