Update alumni current positions
- Akshay → Nomadic
- Harsha → MS CSE, San Jose State
- Srinivasa → BS CSE, UCSD
- Guillermo → MS CS, University of San Francisco
- Alton → PhD, Purdue (Speech, Language, Hearing Sciences)
- Tonko → MS, Aalborg University
- Sven → PhD, TU Munich
- Anas → Bonsai Robotics
- Aryan, Shyam: no current position listed

--- a/people.html
+++ b/people.html
@@ -117,31 +117,31 @@ title: People
     <ul class="alumni-list">
       <li>
         <span class="alumni-name">Akshay Gopalkrishnan</span>
-        <span class="alumni-details">Graduate Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Graduate Researcher &rarr; Nomadic</span>
       </li>
       <li>
         <span class="alumni-name">Aryan Keskar</span>
-        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Student Researcher</span>
       </li>
       <li>
         <span class="alumni-name">Harsha Krishnaswamy</span>
-        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Student Researcher &rarr; MS in CSE, San Jose State University</span>
       </li>
       <li>
         <span class="alumni-name">Shyam Gupta</span>
-        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Student Researcher</span>
       </li>
       <li>
         <span class="alumni-name">Srinivasa Perisetla</span>
-        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Student Researcher &rarr; BS in CSE, UC San Diego</span>
       </li>
       <li>
         <span class="alumni-name">Guillermo Roque</span>
-        <span class="alumni-details">Student Researcher &rarr; Current position TBD</span>
+        <span class="alumni-details">Student Researcher &rarr; MS in CS, University of San Francisco</span>
       </li>
       <li>
         <span class="alumni-name">Alton Chao</span>
-        <span class="alumni-details">CITRIS Intern &rarr; Current position TBD</span>
+        <span class="alumni-details">CITRIS Intern &rarr; PhD in Speech, Language, and Hearing Sciences, Purdue University</span>
       </li>
       <li>
         <span class="alumni-name">Edmund Chao</span>
@@ -149,15 +149,15 @@ title: People
       </li>
       <li>
         <span class="alumni-name">Tonko Emil Westerhof Bossen</span>
-        <span class="alumni-details">Visiting Graduate Researcher &rarr; Aalborg University, Denmark</span>
+        <span class="alumni-details">Visiting Graduate Researcher &rarr; MS, Aalborg University</span>
       </li>
       <li>
         <span class="alumni-name">Sven Kirchner</span>
-        <span class="alumni-details">Visiting Graduate Researcher &rarr; Technical University of Munich, Germany</span>
+        <span class="alumni-details">Visiting Graduate Researcher &rarr; PhD, Technical University of Munich</span>
       </li>
       <li>
         <span class="alumni-name">Anas Saaed</span>
-        <span class="alumni-details">Former role TBD &rarr; Current position TBD</span>
+        <span class="alumni-details">Undergraduate Researcher &rarr; Bonsai Robotics</span>
       </li>
     </ul>
   </div>
