--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,9 @@ title: Highlights & Gallery
   <section class="highlights-page-section">
     <h2>Highlights</h2>
     <ul class="highlights-list">
-      <li>Bosch Best Paper Award at IEEE/CVF WACV</li>
+      <li><a href="https://news.ucmerced.edu/content/undergrads-have-big-showing-renowned-technology-conference">Best Paper Award at IEEE/CVF WACV</a></li>
+      <li><a href="https://news.ucmerced.edu/content/uc-merced-team-takes-first-place-technology-conference">First Place, Navigation Challenge at CVPR AVA Workshop</a></li>
+      <li><a href="https://news.ucmerced.edu/content/grad-student-earns-top-prize-technology-conference">Best Application Paper at CVPR DriveX Workshop</a></li>
       <li>Workshop organizers at CVPR, IEEE IV, IEEE ITSC, and ICPR</li>
       <li>CITRIS WIP Symposium "Most Impactful Contribution" Award</li>
       <li>Multiple students accepted to CRA UR2PhD program</li>
