Update publications page with full list from Google Scholar
- 20 publications from 2021-2025
- Chronological order, newest first
- Award badges for Bosch Best Paper and CVPR Best Application Paper
- Includes Mi3 member co-authored papers
- Links to Google Scholar for complete list

--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@ title: Publications
 <div class="page-header">
   <div class="container">
     <h1>Publications</h1>
-    <p>Research papers and publications from the Mi<sup>3</sup> Lab</p>
+    <p>Research papers from the Mi<sup>3</sup> Lab</p>
   </div>
 </div>
 
@@ -15,22 +15,35 @@ title: Publications
     <h2>2025</h2>
 
     <div class="publication">
-      <h3>WACV 2025 Workshop Paper</h3>
-      <p class="authors">Mi<sup>3</sup> Lab Researchers</p>
-      <p class="venue">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2025</p>
+      <h3>Can Vision-Language Models Understand and Interpret Dynamic Gestures from Pedestrians? Pilot Datasets and Exploration Towards Instructive Nonverbal Commands for Cooperative Autonomous Vehicles</h3>
+      <p class="authors">T. Bossen, R. Greer, A. Møgelmose</p>
+      <p class="venue">CVPR Workshop on Foundation Models for V2X-Based Cooperative Autonomous Driving (DriveX)</p>
+      <span class="award">Best Application Paper Award</span>
+    </div>
+
+    <div class="publication">
+      <h3>Evaluating Multimodal Vision-Language Model Prompting Strategies for Visual Question Answering in Road Scene Understanding</h3>
+      <p class="authors">A. Keskar, S. Perisetla, R. Greer</p>
+      <p class="venue">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</p>
       <span class="award">Bosch Best Paper Award</span>
     </div>
 
     <div class="publication">
-      <h3>DriveX Workshop: Foundation Models for V2X-Based Cooperative Autonomous Driving</h3>
-      <p class="authors">Workshop Co-organizers</p>
-      <p class="venue">CVPR 2025, Nashville, USA</p>
+      <h3>Language-Driven Active Learning for Diverse Open-Set 3D Object Detection</h3>
+      <p class="authors">R. Greer, B. Antoniussen, A. Møgelmose, M. Trivedi</p>
+      <p class="venue">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</p>
     </div>
 
     <div class="publication">
-      <h3>DLIVA Workshop: Data-Driven Learning for Intelligent Vehicle Applications</h3>
-      <p class="authors">Workshop Organizers</p>
-      <p class="venue">IEEE Intelligent Vehicles Symposium (IV) 2025</p>
+      <h3>Towards a Multi-Agent Vision-Language System for Zero-Shot Novel Hazardous Object Detection</h3>
+      <p class="authors">S. Shriram, S. Perisetla, A. Keskar, H. Krishnaswamy, T. Bossen, R. Greer</p>
+      <p class="venue">arXiv preprint</p>
+    </div>
+
+    <div class="publication">
+      <h3>Generative AI for Autonomous Driving: Frontiers and Opportunities</h3>
+      <p class="authors">R. Greer et al.</p>
+      <p class="venue">arXiv preprint</p>
     </div>
   </div>
 
@@ -38,25 +51,115 @@ title: Publications
     <h2>2024</h2>
 
     <div class="publication">
-      <h3>Intelligent Mobility in Unstructured Environments Workshop</h3>
-      <p class="authors">Workshop Organizers</p>
-      <p class="venue">International Conference on Pattern Recognition (ICPR) 2024</p>
+      <h3>Multi-Frame, Lightweight & Efficient Vision-Language Models for Question Answering in Autonomous Driving</h3>
+      <p class="authors">A. Gopalkrishnan, R. Greer, M. Trivedi</p>
+      <p class="venue">arXiv preprint</p>
     </div>
 
     <div class="publication">
-      <h3>VALOR Workshop: Vision and Language Oriented Representation</h3>
-      <p class="authors">Topics in Semantics, Safety, and Explainability in Intelligent Transportation</p>
-      <p class="venue">IEEE Intelligent Transportation Systems Conference (ITSC) 2024</p>
+      <h3>Towards Explainable, Safe Autonomous Driving with Language Embeddings for Novelty Identification and Active Learning</h3>
+      <p class="authors">R. Greer, M. Trivedi</p>
+      <p class="venue">arXiv preprint</p>
     </div>
 
     <div class="publication">
-      <h3>ICRA@40 Research Presentations</h3>
-      <p class="authors">Three research abstracts</p>
-      <p class="venue">ICRA@40, Rotterdam</p>
+      <h3>ActiveAnno3D: An Active Learning Framework for Multi-Modal 3D Object Detection</h3>
+      <p class="authors">A. Ghita, B. Antoniussen, W. Zimmer, R. Greer, A. Møgelmose, A. Knoll</p>
+      <p class="venue">IEEE Intelligent Vehicles Symposium (IV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>The Why, When, and How to Use Active Learning in Large-Data-Driven 3D Object Detection</h3>
+      <p class="authors">R. Greer, B. Antoniussen, M. V. Andersen, A. Møgelmose, M. Trivedi</p>
+      <p class="venue">arXiv preprint</p>
+    </div>
+
+    <div class="publication">
+      <h3>Pedestrian Safety by Intent Prediction: A Lightweight LSTM-Attention Architecture</h3>
+      <p class="authors">A. Alofi, R. Greer, A. Gopalkrishnan, M. Trivedi</p>
+      <p class="venue">IEEE Intelligent Vehicles Symposium (IV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Patterns of Vehicle Lights: Addressing Complexities of Camera-Based Vehicle Light Datasets</h3>
+      <p class="authors">R. Greer, A. Gopalkrishnan, M. Keskar, M. Trivedi</p>
+      <p class="venue">Pattern Recognition Letters</p>
     </div>
   </div>
 
-  <p style="margin-top: 40px; color: #666; font-style: italic;">
-    For a complete list of publications, please visit <a href="https://www.rossgreer.com">Dr. Greer's personal website</a>.
+  <div class="pub-year">
+    <h2>2023</h2>
+
+    <div class="publication">
+      <h3>Robust Traffic Light Detection Using Salience-Sensitive Loss</h3>
+      <p class="authors">R. Greer, A. Gopalkrishnan, J. Landgren, L. Rakla, A. Gopalan, M. Trivedi</p>
+      <p class="venue">IEEE Intelligent Vehicles Symposium (IV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Salient Sign Detection in Safe Autonomous Driving</h3>
+      <p class="authors">R. Greer, A. Gopalkrishnan, N. Deo, A. Rangesh, M. Trivedi</p>
+      <p class="venue">International Technical Conference on the Enhanced Safety of Vehicles (ESV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Safe Control Transitions: Machine Vision Based Observable Readiness Index</h3>
+      <p class="authors">R. Greer, N. Deo, A. Rangesh, P. Gunaratne, M. Trivedi</p>
+      <p class="venue">International Technical Conference on the Enhanced Safety of Vehicles (ESV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Pedestrian Behavior Maps for Safety Advisories: CHAMP Framework</h3>
+      <p class="authors">R. Greer, S. Desai, L. Rakla, A. Gopalkrishnan, A. Alofi, M. Trivedi</p>
+      <p class="venue">IEEE Intelligent Vehicles Symposium (IV)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Ensemble Learning for Fusion of Multiview Vision with Occlusion and Missing Information</h3>
+      <p class="authors">R. Greer, M. Trivedi</p>
+      <p class="venue">arXiv preprint</p>
+    </div>
+
+    <div class="publication">
+      <h3>Spectrogram-Based Deep Learning for Flute Audition Assessment</h3>
+      <p class="authors">M. Agarwal, R. Greer</p>
+      <p class="venue">IEEE International Symposium on Multimedia (ISM)</p>
+    </div>
+  </div>
+
+  <div class="pub-year">
+    <h2>2022</h2>
+
+    <div class="publication">
+      <h3>On Salience-Sensitive Sign Classification in Autonomous Vehicle Path Planning</h3>
+      <p class="authors">R. Greer, J. Isa, N. Deo, A. Rangesh, M. Trivedi</p>
+      <p class="venue">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</p>
+    </div>
+  </div>
+
+  <div class="pub-year">
+    <h2>2021</h2>
+
+    <div class="publication">
+      <h3>Trajectory Prediction in Autonomous Driving with a Lane Heading Auxiliary Loss</h3>
+      <p class="authors">R. Greer, N. Deo, M. Trivedi</p>
+      <p class="venue">IEEE Robotics and Automation Letters (RA-L)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Autonomous Vehicles that Alert Humans to Take-Over Controls: Modeling with Real-World Data</h3>
+      <p class="authors">A. Rangesh, N. Deo, R. Greer, P. Gunaratne, M. Trivedi</p>
+      <p class="venue">IEEE International Intelligent Transportation Systems Conference (ITSC)</p>
+    </div>
+
+    <div class="publication">
+      <h3>Predicting Take-Over Time for Autonomous Driving with Real-World Data</h3>
+      <p class="authors">A. Rangesh, N. Deo, R. Greer, P. Gunaratne, M. Trivedi</p>
+      <p class="venue">arXiv preprint</p>
+    </div>
+  </div>
+
+  <p style="margin-top: 40px; color: #666;">
+    For a complete list of publications, see <a href="https://scholar.google.com/citations?user=ZAX3UCwAAAAJ">Google Scholar</a>.
   </p>
 </div>
