Update people roles and highlights layout
People updates:
- Laura Fleig: Graduate Student Researcher, Johns Hopkins University
- Shashank Shriram: Visiting Undergraduate Researcher, UC Santa Cruz
- Parthib Roy: Graduate Student Researcher
- Marcus Blennemann: Visiting Researcher, UC San Diego

Highlights updates:
- Changed to horizontal/long tile layout
- Using original UC Merced Newsroom article titles

--- a/gallery.html
+++ b/gallery.html
@@ -13,10 +13,10 @@ title: Highlights & Gallery
 <div class="container">
   <section class="highlights-page-section">
     <h2>Highlights</h2>
-    <ul class="highlights-list">
-      <li><a href="https://news.ucmerced.edu/content/undergrads-have-big-showing-renowned-technology-conference">Best Paper Award at IEEE/CVF WACV</a></li>
-      <li><a href="https://news.ucmerced.edu/content/uc-merced-team-takes-first-place-technology-conference">First Place, Navigation Challenge at CVPR AVA Workshop</a></li>
-      <li><a href="https://news.ucmerced.edu/content/grad-student-earns-top-prize-technology-conference">Best Application Paper at CVPR DriveX Workshop</a></li>
+    <ul class="highlights-list horizontal">
+      <li><a href="https://news.ucmerced.edu/content/undergrads-have-big-showing-renowned-technology-conference">Undergrads Have Big Showing at Renowned Technology Conference</a></li>
+      <li><a href="https://news.ucmerced.edu/content/uc-merced-team-takes-first-place-technology-conference">UC Merced Team Takes First Place at Technology Conference</a></li>
+      <li><a href="https://news.ucmerced.edu/content/grad-student-earns-top-prize-technology-conference">Grad Student Earns Top Prize at Technology Conference</a></li>
       <li>Workshop organizers at CVPR, IEEE IV, IEEE ITSC, and ICPR</li>
       <li>CITRIS WIP Symposium "Most Impactful Contribution" Award</li>
       <li>Multiple students accepted to CRA UR2PhD program</li>
