--- a/people.html
+++ b/people.html
@@ -51,8 +51,8 @@ title: People
     <div class="person-card">
       <img src="/assets/images/people/marcus.webp" alt="Marcus Blennemann" class="person-avatar">
       <h3>Marcus Blennemann</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science and Engineering</p>
+      <p class="role">Visiting Researcher</p>
+      <p class="affiliation">UC San Diego</p>
     </div>
 
     <div class="person-card">
@@ -65,7 +65,7 @@ title: People
     <div class="person-card">
       <img src="/assets/images/people/parthib.webp" alt="Parthib Roy" class="person-avatar">
       <h3>Parthib Roy</h3>
-      <p class="role">Student Researcher</p>
+      <p class="role">Graduate Student Researcher</p>
       <p class="affiliation">Computer Science & Engineering</p>
     </div>
 
@@ -79,8 +79,8 @@ title: People
     <div class="person-card">
       <img src="/assets/images/people/shashank.webp" alt="Shashank Shriram" class="person-avatar">
       <h3>Shashank Shriram</h3>
-      <p class="role">Student Researcher</p>
-      <p class="affiliation">Computer Science & Engineering</p>
+      <p class="role">Visiting Undergraduate Researcher</p>
+      <p class="affiliation">UC Santa Cruz</p>
     </div>
 
     <div class="person-card">
@@ -93,8 +93,8 @@ title: People
     <div class="person-card">
       <img src="/assets/images/people/laura.webp" alt="Laura Fleig" class="person-avatar">
       <h3>Laura Fleig</h3>
-      <p class="role">Undergraduate Researcher</p>
-      <p class="affiliation">Cognitive Science</p>
+      <p class="role">Graduate Student Researcher</p>
+      <p class="affiliation">Johns Hopkins University</p>
     </div>
 
     <div class="person-card">
