Homepage tweaks: single-line tagline, add Trust to research card
- Tagline now fits on one line on desktop (wraps on mobile)
- Changed 'Safety Validation & Explainability' to 'Safety, Explainability & Trust'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Home
         <p>Building models that bridge visual perception and natural language understanding for more interpretable AI systems.</p>
       </div>
       <div class="research-card">
-        <h3>Safety Validation & Explainability</h3>
+        <h3>Safety, Explainability & Trust</h3>
         <p>Ensuring AI systems are safe, reliable, and can explain their decisions in ways humans can understand and trust.</p>
       </div>
       <div class="research-card">
