Add image strip to homepage below About section
- Three research images displayed horizontally with same height
- Responsive: stacks vertically on mobile
- Images: first responder, gestures, vehicle accessibility

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@ title: Home
   </div>
 </section>
 
+<section class="home-images">
+  <div class="container">
+    <div class="image-strip">
+      <img src="/assets/images/home/fra.png" alt="First responder interaction research">
+      <img src="/assets/images/home/gestures.png" alt="Gesture recognition research">
+      <img src="/assets/images/home/vehicle_ramp.png" alt="Vehicle accessibility research">
+    </div>
+  </div>
+</section>
+
 <section class="research">
   <div class="container">
     <h2 class="section-title">Research Focus Areas</h2>
